[package]
name = "rust_os"
version = "0.1.0"
authors = ["Ramon van Sprundel <ramonvansprundel@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6" # future versions no longer work
spin = "0.5.2"
x86_64 = "0.12.1"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[[test]]
name = "should_panic"
harness = false # the test runner isn't really needed for singular tests

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", # qemu escape hatch
    "-serial", "stdio",
    "-display", "none" # disable window on test
]
test-timeout = 300 # in seconds
test-success-exit-code = 33 # 0x10 is our success code, 0x11 is our failed code
