[package]
name = "rust_os"
version = "0.1.0"
authors = ["Ramon van Sprundel <ramonvansprundel@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = { version = "0.9.3", features = ["map_physical_memory"]}
volatile = "0.2.6" # future versions no longer work
spin = "0.5.2"
x86_64 = "0.13.2"
uart_16550 = "0.2.0"
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.8.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[[test]]
name = "should_panic"
harness = false # the test runner isn't really needed for singular tests

[[test]]
name = "stack_overflow"
harness = false

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", # qemu escape hatch
    "-serial", "stdio",
    "-display", "none" # disable window on test
]
test-timeout = 300 # in seconds
test-success-exit-code = 33 # 0x10 is our success code, 0x11 is our failed code
